--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
 	<title>Tetris by Caio Marchi - Powered by Phaser</title>
 	<script type="text/javascript" src="js/phaser.js"></script>
-	<script type="text/javascript" src="js/gamelogic.js"></script>
+	<script type="text/javascript" src="js/gameover.js"></script>
+	<script type="text/javascript" src="js/singlePlayerPrep.js"></script>
+	<script type="text/javascript" src="js/play.js"></script>
+	<script type="text/javascript" src="js/menu.js"></script>
+	<script type="text/javascript" src="js/load.js"></script>
+	<script type="text/javascript" src="js/boot.js"></script>
+	<script type="text/javascript" src="js/game.js"></script>
 </head>
 <body>
-
+<div id="gameDiv"></div>
 </body>
 </html>
