Index page updated with useful links

--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
 </head>
 <body>
 <div id="gameDiv"></div>
+<p>Source code: <a href="https://bitbucket.org/CaioMGA/phaser-tetris" target="blank_">link</a></p>
+<p>Devlog: <a href="https://imgur.com/a/G2Ze6" target="blank_">link</a></p>
+<p>Phaser: <a href="http://phaser.io" target="blank_">link</a></p>
+<p>Twitter: <a href="https://twitter.com/CaioMGA/" target="blank_">@CaioMGA</a></p>
 </body>
 </html>
