--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 	<script type="text/javascript" src="js/gameover.js"></script>
 	<script type="text/javascript" src="js/singlePlayerPrep.js"></script>
 	<script type="text/javascript" src="js/play.js"></script>
+	<script type="text/javascript" src="js/credits.js"></script>
+	<script type="text/javascript" src="js/settings.js"></script>
 	<script type="text/javascript" src="js/menu.js"></script>
 	<script type="text/javascript" src="js/load.js"></script>
 	<script type="text/javascript" src="js/boot.js"></script>
 	<script type="text/javascript" src="js/game.js"></script>
 </head>
 <body>
-<div id="gameDiv"></div>
+<div id="gameDiv">
+</div>
 </body>
 </html>
