--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="js/controls.js"></script>
 	<script type="text/javascript" src="js/leaderboard.js"></script>
 	<script type="text/javascript" src="js/soundMenu.js"></script>
+	<script type="text/javascript" src="js/scoreSystem.js"></script>
 	<script type="text/javascript" src="js/credits.js"></script>
 	<script type="text/javascript" src="js/changeBg.js"></script>
 	<script type="text/javascript" src="js/settings.js"></script>
@@ -16,6 +17,7 @@
 	<script type="text/javascript" src="js/load.js"></script>
 	<script type="text/javascript" src="js/menuNav.js"></script>
 	<script type="text/javascript" src="js/boot.js"></script>
+	<script type="text/javascript" src="js/firstRun.js"></script>
 	<script type="text/javascript" src="js/game.js"></script>
 </head>
 <body>
