Custom controls implemented

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Tetris by Caio Marchi - Powered by Phaser</title>
 	<script type="text/javascript" src="js/phaser.js"></script>
 	<script type="text/javascript" src="js/gameover.js"></script>
+	<script type="text/javascript" src="js/auxKeys.js"></script>
 	<script type="text/javascript" src="js/firstRun.js"></script>
 	<script type="text/javascript" src="js/singlePlayerPrep.js"></script>
 	<script type="text/javascript" src="js/play.js"></script>
