--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="js/changeBg.js"></script>
 	<script type="text/javascript" src="js/settings.js"></script>
 	<script type="text/javascript" src="js/menu.js"></script>
+	<script type="text/javascript" src="js/textLoader.js"></script>
 	<script type="text/javascript" src="js/load.js"></script>
 	<script type="text/javascript" src="js/menuNav.js"></script>
 	<script type="text/javascript" src="js/boot.js"></script>
