Language Selection Implemented

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	<script type="text/javascript" src="js/changeBg.js"></script>
 	<script type="text/javascript" src="js/settings.js"></script>
 	<script type="text/javascript" src="js/menu.js"></script>
-	<script type="text/javascript" src="js/textLoader.js"></script>
 	<script type="text/javascript" src="js/load.js"></script>
 	<script type="text/javascript" src="js/menuNav.js"></script>
+	<script type="text/javascript" src="js/languages.js"></script>
 	<script type="text/javascript" src="js/boot.js"></script>
 	<script type="text/javascript" src="js/audioControl.js"></script>
 	<script type="text/javascript" src="js/game.js"></script>
