--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<script type="text/javascript" src="js/phaser.js"></script>
 	<script type="text/javascript" src="js/gameover.js"></script>
 	<script type="text/javascript" src="js/auxKeys.js"></script>
+	<script type="text/javascript" src="js/menuAux.js"></script>
 	<script type="text/javascript" src="js/firstRun.js"></script>
 	<script type="text/javascript" src="js/singlePlayerPrep.js"></script>
 	<script type="text/javascript" src="js/play.js"></script>
