PhaserNineSlice plugin added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Tetris by Caio Marchi - Powered by Phaser</title>
 	<script type="text/javascript" src="js/phaser.js"></script>
 	<script type="text/javascript" src="js/gameover.js"></script>
+	<script type="text/javascript" src="js/PhaserNineSlice.js"></script>
 	<script type="text/javascript" src="js/auxKeys.js"></script>
 	<script type="text/javascript" src="js/menuAux.js"></script>
 	<script type="text/javascript" src="js/styleAux.js"></script>
@@ -24,6 +25,7 @@
 	<script type="text/javascript" src="js/boot.js"></script>
 	<script type="text/javascript" src="js/audioControl.js"></script>
 	<script type="text/javascript" src="js/game.js"></script>
+
 </head>
 <body>
 <div id="gameDiv">
