martelsans font added. NO MORE ARIAL!

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Tetris by Caio Marchi - Powered by Phaser</title>
+
+	<link rel="stylesheet" href="css/fonts.css">
 	<script type="text/javascript" src="js/phaser.js"></script>
 	<script type="text/javascript" src="js/gameover.js"></script>
 	<script type="text/javascript" src="js/PhaserNineSlice.js"></script>
@@ -28,6 +30,7 @@
 
 </head>
 <body>
+<div id="loader" class="fontLoader" style = "font-family: MartelSans;">-</div>
 <div id="gameDiv">
 </div>
 </body>
