Single Player Pause Menu created

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="js/firstRun.js"></script>
 	<script type="text/javascript" src="js/singlePlayerPrep.js"></script>
 	<script type="text/javascript" src="js/play.js"></script>
+	<script type="text/javascript" src="js/singlePlayerPaused.js"></script>
 	<script type="text/javascript" src="js/controls.js"></script>
 	<script type="text/javascript" src="js/leaderboard.js"></script>
 	<script type="text/javascript" src="js/soundMenu.js"></script>
